force-app/main/default/objects/NTSP_Facility__c/NTSP_Facility__c.object-meta.xml
<CustomObject>
    <label>NTSP Facility</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>NTSP Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTSP Facilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>