force-app/main/default/objects/NTSP_Facility__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>NTSP Facilities</relationshipLabel>
    <relationshipName>NTSP_Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>