force-app/main/default/objects/NTSP_Facility__c/fields/NTSP_Registered_Site__c.field-meta.xml
<CustomField>
    <fullName>NTSP_Registered_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTSP Registered Site</label>
    <type>Checkbox</type>
</CustomField>