force-app/main/default/objects/NTSP_Facility__c/fields/Station_Code__c.field-meta.xml
<CustomField>
    <fullName>Station_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>